// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePage should render the home page 1`] = `
<div
  className="HomePage"
>
  <section
    className="ta-c"
  >
    <h1>
      What do you want to learn? 
      <Icon
        i="search"
        s="xxl"
      />
    </h1>
    <form
      action="/search-subjects"
    >
      <p>
        <input
          autoFocus={true}
          name="q"
          placeholder="example: Music"
          size="40"
          type="search"
        />
      </p>
      <p>
        <button
          type="submit"
        >
          <Icon
            i="search"
            s="m"
          />
           Search
        </button>
      </p>
    </form>
  </section>
  <section
    className="ta-r"
  >
    <p>
      <small>
        <Link
          replace={false}
          to="/log-in"
        >
          <Icon
            i="logIn"
            s="m"
          />
           Log In
        </Link>
         
        or
         
        <Link
          replace={false}
          to="/sign-up"
        >
          <Icon
            i="signUp"
            s="m"
          />
           Sign Up
        </Link>
      </small>
    </p>
  </section>
  <section>
    <blockquote>
      <h1>
        Hey friends... 
        <Icon
          i="friends"
          s="xxl"
        />
      </h1>
      <p>
        So I'm rebuilding Sagefy to (1) let anyone 
        <em>
          learn
        </em>
         
        without an account, (2) 
        <em>
          make
        </em>
         content without an account, and to (3) drastically 
        <em>
          simplify
        </em>
         contributing. Sagefy is temporarily limited. For now:
      </p>
      <ul>
        <li>
          <Icon
            i="subject"
            s="m"
          />
           
          <strong>
            Follow
          </strong>
           and create subjects!
        </li>
        <li>
          <ExternalLink
            href="https://docs.sagefy.org/mocks"
          >
            <Icon
              i="view"
              s="m"
            />
             
            <strong>
              View
            </strong>
             the prototype
          </ExternalLink>
           
          of what's coming!
        </li>
        <li>
          <ExternalLink
            href="https://sgfy.xyz/updates"
          >
            <Icon
              i="updates"
              s="m"
            />
             
            <strong>
              Subscribe
            </strong>
             to biweekly email updates
          </ExternalLink>
          .
        </li>
      </ul>
      <p>
        <small>
          Last updated 2019 Apr 1
        </small>
      </p>
    </blockquote>
  </section>
  <section>
    <div
      className="ta-c m-yc"
    >
      <img
        alt="astrolabe"
        height="120"
        src="/astrolabe.svg"
      />
      <h2>
        Sagefy
      </h2>
      <p>
        <em>
          Learn anything, adapted for you. Free.
        </em>
      </p>
    </div>
  </section>
  <section>
    <ul>
      <li>
        <Icon
          i="adapt"
          s="m"
        />
         
        <strong>
          Adaptive Learning.
        </strong>
         Sagefy optimizes based on what you already know and what your goal is. Get the most out of your time and effort spent.
      </li>
      <li>
        <Icon
          i="open"
          s="m"
        />
         
        <strong>
          Open Content.
        </strong>
         Anyone can view, share, create, and edit content. Because anyone can contribute, you can learn anything you want.
      </li>
      <li>
        <ExternalLink
          href="https://youtu.be/gFn4Q9tx7Qs"
        >
          <Icon
            i="video"
            s="m"
          />
           Watch the overview video
        </ExternalLink>
        .
      </li>
    </ul>
  </section>
  <Footer
    role="sg_anonymous"
  />
</div>
`;

exports[`HomePage should render the logged in home page 1`] = `
<div
  className="HomePage"
>
  <section
    className="ta-c"
  >
    <h1>
      What do you want to learn? 
      <Icon
        i="search"
        s="xxl"
      />
    </h1>
    <form
      action="/search-subjects"
    >
      <p>
        <input
          autoFocus={true}
          name="q"
          placeholder="example: Music"
          size="40"
          type="search"
        />
      </p>
      <p>
        <button
          type="submit"
        >
          <Icon
            i="search"
            s="m"
          />
           Search
        </button>
      </p>
    </form>
  </section>
  <section
    className="ta-r"
  >
    <p>
      <small>
        <Link
          replace={false}
          to="/dashboard"
        >
          Go to 
          <Icon
            i="dashboard"
            s="m"
          />
           Dashboard
        </Link>
      </small>
    </p>
  </section>
  <section>
    <blockquote>
      <h1>
        Hey friends... 
        <Icon
          i="friends"
          s="xxl"
        />
      </h1>
      <p>
        So I'm rebuilding Sagefy to (1) let anyone 
        <em>
          learn
        </em>
         
        without an account, (2) 
        <em>
          make
        </em>
         content without an account, and to (3) drastically 
        <em>
          simplify
        </em>
         contributing. Sagefy is temporarily limited. For now:
      </p>
      <ul>
        <li>
          <Icon
            i="subject"
            s="m"
          />
           
          <strong>
            Follow
          </strong>
           and create subjects!
        </li>
        <li>
          <ExternalLink
            href="https://docs.sagefy.org/mocks"
          >
            <Icon
              i="view"
              s="m"
            />
             
            <strong>
              View
            </strong>
             the prototype
          </ExternalLink>
           
          of what's coming!
        </li>
        <li>
          <ExternalLink
            href="https://sgfy.xyz/updates"
          >
            <Icon
              i="updates"
              s="m"
            />
             
            <strong>
              Subscribe
            </strong>
             to biweekly email updates
          </ExternalLink>
          .
        </li>
      </ul>
      <p>
        <small>
          Last updated 2019 Apr 1
        </small>
      </p>
    </blockquote>
  </section>
  <section>
    <div
      className="ta-c m-yc"
    >
      <img
        alt="astrolabe"
        height="120"
        src="/astrolabe.svg"
      />
      <h2>
        Sagefy
      </h2>
      <p>
        <em>
          Learn anything, adapted for you. Free.
        </em>
      </p>
    </div>
  </section>
  <section>
    <ul>
      <li>
        <Icon
          i="adapt"
          s="m"
        />
         
        <strong>
          Adaptive Learning.
        </strong>
         Sagefy optimizes based on what you already know and what your goal is. Get the most out of your time and effort spent.
      </li>
      <li>
        <Icon
          i="open"
          s="m"
        />
         
        <strong>
          Open Content.
        </strong>
         Anyone can view, share, create, and edit content. Because anyone can contribute, you can learn anything you want.
      </li>
      <li>
        <ExternalLink
          href="https://youtu.be/gFn4Q9tx7Qs"
        >
          <Icon
            i="video"
            s="m"
          />
           Watch the overview video
        </ExternalLink>
        .
      </li>
    </ul>
  </section>
  <Footer
    role="sg_user"
  />
</div>
`;
